tests/negative/neg_pr118i_enum_range_subtype.safe
package neg_pr118i_enum_range_subtype

   type color is (red, green, blue);
   subtype primary is color (red to green);
